# PDF-AI-TRANSLATE

./: .gitignore  BUILD_INSTALLER.md  DEPLOYMENT_CHECKLIST.md  PACKAGING_SUMMARY.md  README.md  build_desktop.bat  pyproject.toml  start_desktop.bat  start_gui.bat
assets/: create_icon.py
docs/: MINERU_INTEGRATION_PLAN.md  NEW_FEATURES_README.md  THEME_IMPROVEMENTS.md  current_status_summary.md  detailed_implementation_plan.md  implementation_plan.md  implementation_progress.md  mineru_integration_research.md  mineru_translation_workflow_research.md  progress_update.md
pdf2zh_next/: __init__.py  const.py  desktop_gui.py  document_viewer.py  gui.py  gui_new.py  gui_optimized.py  gui_theme.py  gui_theme_clean.py  gui_with_mineru_optimized.py  high_level.py  main.py  markdown_assets.py  markdown_pdf.py  markdown_preview.py  markdown_smart_translator.py  markdown_translator.py  mineru_adapter.py  mineru_adapter_fixed.py  mineru_markdown_units.py  mineru_online_client.py  mineru_optimized_pipeline.py  mineru_pipeline.py  mineru_pipeline_fixed.py  progress_tracker.py  storage_manager.py  webview_gui.py  windows_no_console.py
pdf2zh_next/config/: main.py  model.py  translate_engine_model.py
pdf2zh_next/translator/: base_translator.py
rust-desktop/: package-lock.json  package.json
rust-desktop/scripts/: prepare_runtime_zip.py
rust-desktop/src/: index.html
rust-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust-desktop/src-tauri/src/: main.rs
script/: _pystand_static.int  mineru_vlm_translate_prompt.txt  smoke_mineru_pipeline.py  test_mineru_vlm_prompt.py
(+4 files in other folders)
